--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,18 +20,20 @@ a:hover {
 
 ul.mainmenu {
     list-style: none;
-    background: #c949bf;
+    background: rgb(66,55,61);
+background: linear-gradient(90deg, rgba(66,55,61,1) 0%, rgba(154,126,166,1) 25%, rgba(196,136,159,1) 50%, rgba(248,178,161,1) 75%, rgba(253,226,177,1) 100%);
     height: 60px;
     margin: 0;
     padding: 0;
     color:  #000000;
     font-size: 20px;
     overflow: hidden;
-    border-bottom: 2px solid #57acc5;
+    border-bottom: 2px solid #C4889F;
 }
 ul.mainmenu li {
     float: left;
     margin: 18px 40px 0 50px;
+
 }
 ul.mainmenu li.last{float: right;}
 
