--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,6 +47,29 @@ ul.mainmenu li a:hover{
     text-shadow: 2px 2px #ff0000;
 }
 
+ul.list-posts {
+    list-style: none;
+    margin: 0;
+    padding: 0px;
+    max-width: 600px;
+}
+
+ul.list-posts li {
+    margin: 20px 0 0 0;
+    border: 1px solid #eee;
+}
+
+ul.list-posts .annonce {
+    margin: 0;
+    padding: 10px, 5px, 10px, 5px;
+}
+
+ul.list-posts .title {
+    margin: 0;
+    padding: 5px;
+    background: #eee;
+}
+
 div.content {
     margin: 10px;
 }
