--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,29 @@
 
 {% block content %}
 {{ super() }}
-<form action="/login", method="post", class="form-contact">
-<p><label>Имя: </label> <input type="text" name="username" value="" requied />
-<p><label>Пароль: </label> <input type="text" name="psw" value="" requied />
-<p><input type="submit" value="Войти" />
+{% for cat, msg in get_flashed_messages(True) %}
+<div class="flash {{cat}}">{{msg}}</div>
+{% endfor %}
+<form action="" method="post" class="form-contact">
+{{ form.hidden_tag() }}
+
+{% for field in form if field.name not in ['csrf_token', 'remember', 'submit'] -%}
+  <p>{{ field.label() }}
+  {% if field.errors %}
+      {{ field(class="invalid") }}
+  <span class="invalid-feedback">
+      {% for e in field.errors %}
+      {{ e }}
+      {% endfor %}
+  </span>
+  {% else %}
+      {{ field() }}
+  {% endif %}
+{% endfor %}
+
+<p>{{ form.remember.label() }} {{ form.remember() }}
+<p>{{ form.submit() }}
+<hr align=left width="300px">
+<p><a href="{{url_for('register')}}">Регистрация</a>
 </form>
 {% endblock %}
