--- a/templates/main.html
+++ b/templates/main.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 {{ super() }}
+<p><a href="{{url_for('admin.index')}}">Админ-панель</a>
 <hr>
 <h2>Список статей</h2>
 <ul class="list-posts">
 {% for p in posts %}
 <li>
 <p class="title"><a href="{{ url_for('showPost', alias=p.url)}}">{{p.title}}</a></p>
-<p class="annonce">{{p.text[:100] | striptags }}</p>
+<p class="annonce">{{ p.text[:50] | striptags  }}</p>
 </li>
 {% endfor %}
 </ul>
