--- a/templates/page404.html
+++ b/templates/page404.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 {{ super() }}
-<p>Страница не найдена, вернуться на <a href="{{url_for('main')}}">главную</a>
+<p>Страница не найдена, вернуться на <a href="{{url_for('main')}}">главную</a> страницу.
 {% endblock %}
